@@ -37,7 +37,8 @@ in the data files, or saved separately in the &appname; application folder. Also
 is started, it can automatically reopen the last data file that was open. The
 <guilabel>Tip of the Day</guilabel> dialog contains helpful hints on using &appname;
 and appears at program startup. You may want to read through some of the hints and
-then disable the dialog.
+then disable the dialog. The <interface>Quick Filter</interface> in the toolbar is useful
+for easily filtering through your collection and can utilize regular expressions.
 </para>
 
 <para>
