@@ -109,6 +109,9 @@
     <entry key="Enable Webcam" type="Bool">
         <default>true</default>
     </entry>
+    <entry key="Quick Filter RegExp" type="Bool">
+        <default>false</default>
+    </entry>
 </group>
 
 <group name="Printing">
