@@ -171,6 +171,7 @@ private:
   QRadioButton* m_rbImageInAppDir;
   QRadioButton* m_rbImageInLocalDir;
   QCheckBox* m_cbOpenLastFile;
+  QCheckBox* m_cbQuickFilterRegExp;
   QCheckBox* m_cbShowTipDay;
   QCheckBox* m_cbEnableWebcam;
   QCheckBox* m_cbCapitalize;
