@@ -1,3 +1,7 @@
+2022-03-15  Robby Stephenson  <robby@periapsis.org>
+
+	* Added option for using regular expressions in quick filter (Bug 450517).
+
 2022-03-13  Robby Stephenson  <robby@periapsis.org>
 
 	* Added data source for arcade-history.com (Bug 450058).
